--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <link rel="stylesheet" href="assets/styles/style.css">
+    </head>
+
+    <body>
+        <nav class="nav">
+            <a href="index.html">Home</a>
+            <a href="career.html">Career</a>
+            <a href="course.html">Course</a>
+            <a href="about.html">About Us</a>
+            <a href="register.html">Register</a>
+        </nav>
+        
+    </body>
 </html>
